--- a/pages/styles/swipe.module.css
+++ b/pages/styles/swipe.module.css
@@ -1,5 +1,6 @@
 .swiper {
-  width: 14rem;
+  margin-top: 1rem;
+  width: 17rem;
   height: auto;
   border-radius: 18px;
   border-color: aliceblue;
