--- a/pages/styles/swipe.module.css
+++ b/pages/styles/swipe.module.css
@@ -1,54 +1,64 @@
 .swiper {
-  margin-top: 1rem;
-  width: 17rem;
-  height: auto;
-  border-radius: 18px;
-  border-color: aliceblue;
-  background: rgb(255,255,255);
-  background: linear-gradient(0deg, rgba(255,255,255,1) 34%, rgba(255,255,255,0) 100%);
+	margin-top: 1rem;
+	width: 17rem;
+	height: auto;
+	border-radius: 18px;
+	border-color: aliceblue;
+	background: rgb(255, 255, 255);
+	background: linear-gradient(0deg, rgba(255, 255, 255, 1) 34%, rgba(255, 255, 255, 0) 100%);
 }
 
 .swiperslide {
-  border-radius: 18px;
-  background: rgb(255,255,255);
+	border-radius: 18px;
+	background: rgb(255, 255, 255);
+}
+
+.firstslide {
+	width: auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	justify-items: center;
+	margin: 2rem auto;
+	height: 19rem;
 }
 
 .swiper-slide:nth-child(1n) {
-  background-color: rgb(206, 17, 17);
+	background-color: rgb(206, 17, 17);
 }
 
 .swiper-slide:nth-child(2n) {
-  background-color: rgb(0, 140, 255);
+	background-color: rgb(0, 140, 255);
 }
 
 .swiper-slide:nth-child(3n) {
-  background-color: rgb(10, 184, 111);
+	background-color: rgb(10, 184, 111);
 }
 
 .swiper-slide:nth-child(4n) {
-  background-color: rgb(211, 122, 7);
+	background-color: rgb(211, 122, 7);
 }
 
 .swiper-slide:nth-child(5n) {
-  background-color: rgb(118, 163, 12);
+	background-color: rgb(118, 163, 12);
 }
 
 .swiper-slide:nth-child(6n) {
-  background-color: rgb(180, 10, 47);
+	background-color: rgb(180, 10, 47);
 }
 
 .swiper-slide:nth-child(7n) {
-  background-color: rgb(35, 99, 19);
+	background-color: rgb(35, 99, 19);
 }
 
 .swiper-slide:nth-child(8n) {
-  background-color: rgb(0, 68, 255);
+	background-color: rgb(0, 68, 255);
 }
 
 .swiper-slide:nth-child(9n) {
-  background-color: rgb(218, 12, 218);
+	background-color: rgb(218, 12, 218);
 }
 
 .swiper-slide:nth-child(10n) {
-  background-color: rgb(54, 94, 77);
+	background-color: rgb(54, 94, 77);
 }
